Icon alignment correction close #445

--- a/modules/admin/resources/scss/base/_typography.scss
+++ b/modules/admin/resources/scss/base/_typography.scss
@@ -3,6 +3,7 @@
 h1, h2, h3, h4, h5, h6 {
     line-height: 110%;
     margin: 15px 0;
+    letter-spacing: normal;
 }
 h1 {
     font-size: 3rem;
